; ModuleID = '/home/carl/AnghaBench/libgit2/tests/config/extr_global.c_test_config_global__open_xdg.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/config/extr_global.c_test_config_global__open_xdg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32 }

@.str = private unnamed_addr constant [11 x i8] c"teststring\00", align 1
@.str.1 = private unnamed_addr constant [14 x i8] c"this.variable\00", align 1
@.str.2 = private unnamed_addr constant [15 x i8] c"xdg/git/config\00", align 1
@.str.3 = private unnamed_addr constant [32 x i8] c"# XDG config\0A[core]\0A  test = 1\0A\00", align 1
@GIT_CONFIG_LEVEL_XDG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_config_global__open_xdg() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.TYPE_4__, align 4
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i8** %4, align 8
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0), i8** %5, align 8
  %7 = bitcast %struct.TYPE_4__* %6 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %7, i8 0, i64 8, i1 false)
  %8 = call i32 @cl_git_mkfile(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.3, i64 0, i64 0))
  %9 = call i32 @git_config_open_default(i32** %1)
  %10 = call i32 @cl_git_pass(i32 %9)
  %11 = load i32*, i32** %1, align 8
  %12 = load i32, i32* @GIT_CONFIG_LEVEL_XDG, align 4
  %13 = call i32 @git_config_open_level(i32** %2, i32* %11, i32 %12)
  %14 = call i32 @cl_git_pass(i32 %13)
  %15 = load i32*, i32** %1, align 8
  %16 = call i32 @git_config_open_global(i32** %3, i32* %15)
  %17 = call i32 @cl_git_pass(i32 %16)
  %18 = load i32*, i32** %2, align 8
  %19 = load i8*, i8** %5, align 8
  %20 = load i8*, i8** %4, align 8
  %21 = call i32 @git_config_set_string(i32* %18, i8* %19, i8* %20)
  %22 = call i32 @cl_git_pass(i32 %21)
  %23 = load i32*, i32** %3, align 8
  %24 = load i8*, i8** %5, align 8
  %25 = call i32 @git_config_get_string_buf(%struct.TYPE_4__* %6, i32* %23, i8* %24)
  %26 = call i32 @cl_git_pass(i32 %25)
  %27 = load i8*, i8** %4, align 8
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @cl_assert_equal_s(i8* %27, i32 %29)
  %31 = call i32 @git_buf_dispose(%struct.TYPE_4__* %6)
  %32 = load i32*, i32** %3, align 8
  %33 = call i32 @git_config_free(i32* %32)
  %34 = load i32*, i32** %2, align 8
  %35 = call i32 @git_config_free(i32* %34)
  %36 = load i32*, i32** %1, align 8
  %37 = call i32 @git_config_free(i32* %36)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @cl_git_mkfile(i8*, i8*) #2

declare dso_local i32 @cl_git_pass(i32) #2

declare dso_local i32 @git_config_open_default(i32**) #2

declare dso_local i32 @git_config_open_level(i32**, i32*, i32) #2

declare dso_local i32 @git_config_open_global(i32**, i32*) #2

declare dso_local i32 @git_config_set_string(i32*, i8*, i8*) #2

declare dso_local i32 @git_config_get_string_buf(%struct.TYPE_4__*, i32*, i8*) #2

declare dso_local i32 @cl_assert_equal_s(i8*, i32) #2

declare dso_local i32 @git_buf_dispose(%struct.TYPE_4__*) #2

declare dso_local i32 @git_config_free(i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
